	refined.  I screwed up on this originally (TC).  This is the other
	half of a fix for Leolo's lmfixed problem <sigh>.
	- makemap_addi() now only puts colours into the palette that it
	found while optimizing the palette (so we don't get 256 colour
	palettes for 2 colour images :)
	- initial implementation of a row-based interface to low-level
	images (for performance)

~~~~~~~~~~~~~^ ^ ^~~~~~~~~~~~~~


0.40    TODO list
        iolayer:
        - Add scalar/mmap to iolayer
        - Add close() code to iolayer
        - Merge callback interface into iolayer
        - Add interface for writing to all formats but tiff
        - Add interface for reading for png (started), 
          gif (merge with cb patch), ppm and raw
        - Add make new tests once all formats support io_layer
        - Implment the maxread threshold (Indicates how far 
          a library can read before it indicates that it's done).

        MultiImage & metadata support:
        - Figure what interface should be between C and perl?
        - How to store data in the C interface for tags/metadata?

        Old sins:
        - Make sure everything is doable with the OO interface
        - Split the other classes into seperate files
        - Compile with memory debugging enabled and fix leaks
        - dynaload.c is strongly tied to perl
	
	- should i_readgif returned colormap be an arrayref of 
	Imager::Color objects?  Note that this will break 
	compatibility with previous releases

	- should Imager::Font be split into a base class whose 	
	new chooses a base class (ttf, t1 or win32?) to 
	instantiate.  Currently Imager::Font uses if() statements to
	select between each type of font.

	- should we overload <=> or cmp for Imager::Color objects?

        Documentation:
        - Add to the documentation
        - Write a tutorial?
        - Write a guide to installing the helper libraries
        - Go through the entire project and add comments in pod